chore: update story 1.1 progress — tasks 4 and 8 complete
- GitHub repo created: Brun00000000/task-manager-aios
- main and develop branches pushed
- CI/CD pipeline active on GitHub Actions

--- a/docs/stories/1.1.project-setup.story.md
+++ b/docs/stories/1.1.project-setup.story.md
@@ -74,11 +74,11 @@ quality_gate_tools:
   - [x] 3.6 Executar `npm run lint` e confirmar sem erros
   - [x] 3.7 Executar `npm run typecheck` e confirmar sem erros
 
-- [ ] **Task 4: Configurar Repositório GitHub** (AC: 4)
-  - [ ] 4.1 Criar repositório `task-manager` no GitHub (público ou privado)
-  - [ ] 4.2 Criar `.gitignore` incluindo: `.env.local`, `.env*.local`, `node_modules/`, `.next/`
-  - [ ] 4.3 Push inicial para branch `main`
-  - [ ] 4.4 Criar branch `develop` a partir de `main`: `git checkout -b develop && git push -u origin develop`
+- [x] **Task 4: Configurar Repositório GitHub** (AC: 4)
+  - [x] 4.1 Criar repositório `task-manager` no GitHub (público ou privado)
+  - [x] 4.2 Criar `.gitignore` incluindo: `.env.local`, `.env*.local`, `node_modules/`, `.next/`
+  - [x] 4.3 Push inicial para branch `main`
+  - [x] 4.4 Criar branch `develop` a partir de `main`: `git checkout -b develop && git push -u origin develop`
 
 - [x] **Task 5: Configurar Ferramentas de Teste** (prerequisite para AC: 5)
   - [x] 5.1 Instalar Vitest + RTL: `npm install -D vitest @vitejs/plugin-react @testing-library/react @testing-library/jest-dom jsdom`
@@ -101,8 +101,8 @@ quality_gate_tools:
 
 - [x] **Task 8: Configurar GitHub Actions CI/CD** (AC: 5)
   - [x] 8.1 Criar `.github/workflows/ci.yaml` com jobs `quality` e `e2e` (ver Dev Notes — código exato)
-  - [ ] 8.2 Testar pipeline: push para `develop` e verificar workflow passa
-  - [ ] 8.3 Confirmar que PR para `main` aciona workflow
+  - [x] 8.2 Testar pipeline: push para `develop` e verificar workflow passa
+  - [x] 8.3 Confirmar que PR para `main` aciona workflow
 
 - [ ] **Task 9: Configurar Vercel Deploy** (AC: 6)
   - [ ] 9.1 Conectar repositório ao Vercel via dashboard (Import Project)
