--- a/docs/stories/2.1.task-list-create.story.md
+++ b/docs/stories/2.1.task-list-create.story.md
@@ -1,7 +1,7 @@
 # Story 2.1: Task List & Create
 
 ## Status
-InReview
+Done
 
 ## Executor Assignment
 
@@ -234,6 +234,7 @@ export function useCreateTask() {
 | 2026-02-21 | 1.0 | Story criada | @sm (River) |
 | 2026-02-21 | 1.1 | Status Draft para Ready — GO (10/10). ACs testáveis, escopo sem ambiguidade, Repository+ReactQuery pattern bem definido. Pronta para implementação. | @po (Pax) |
 | 2026-02-21 | 1.2 | Implementação completa (YOLO mode). Todos os 8 ACs implementados. lint ✅ (0 erros) | typecheck ✅ | test 8/8 ✅ | build ✅. Status → InReview. | @dev (Dex) |
+| 2026-02-21 | 1.3 | PR #7 merged (squash) → develop. CI Quality Checks ✅. ci.yaml corrigido + workflow scope adicionado ao PAT. Status → Done. | @devops (Gage) |
 
 ---
 
