chore: close story 2.2 — Done

--- a/docs/stories/2.2.task-edit-delete-recovery.story.md
+++ b/docs/stories/2.2.task-edit-delete-recovery.story.md
@@ -1,7 +1,7 @@
 # Story 2.2: Task Edit, Delete & Recovery
 
 ## Status
-InReview
+Done
 
 ## Executor Assignment
 
@@ -208,6 +208,7 @@ toast('Tarefa movida para a lixeira', {
 | 2026-02-21 | 1.0 | Story criada | @sm (River) |
 | 2026-02-21 | 1.1 | Status Draft para Ready — GO (10/10). Optimistic update e undo toast bem especificados, riscos de rollback documentados. Pronta para implementação. | @po (Pax) |
 | 2026-02-21 | 1.2 | Implementação completa (YOLO mode). Todos os 8 ACs implementados. lint ✅ | typecheck ✅ | test 8/8 ✅ | build ✅. Status → InReview. | @dev (Dex) |
+| 2026-02-21 | 1.3 | PR #8 merged (squash) → develop. CI Quality Checks ✅ (43s). Status → Done. | @devops (Gage) |
 
 ---
 
