--- a/docs/stories/2.2.task-edit-delete-recovery.story.md
+++ b/docs/stories/2.2.task-edit-delete-recovery.story.md
@@ -1,7 +1,7 @@
 # Story 2.2: Task Edit, Delete & Recovery
 
 ## Status
-Ready
+Done
 
 ## Executor Assignment
 
@@ -111,55 +111,55 @@ Sem edicao e exclusao segura o produto e inutilizavel em uso real. O undo toast 
 
 ## Tasks / Subtasks
 
-- [ ] **Task 1: Instalar sonner** (AC: 5)
-  - [ ] 1.1 `npm install sonner`
-  - [ ] 1.2 Adicionar `<Toaster />` ao providers.tsx
+- [x] **Task 1: Instalar sonner** (AC: 5)
+  - [x] 1.1 `npm install sonner` — já instalado na Story 2.1
+  - [x] 1.2 Adicionar `<Toaster />` ao providers.tsx — já feito na Story 2.1
 
-- [ ] **Task 2: Estender TaskRepository** (AC: 3, 4, 6, 7)
-  - [ ] 2.1 Metodo `update(userId, id, data)`: UPDATE com verificacao de ownership via RLS
-  - [ ] 2.2 Metodo `softDelete(userId, id)`: SET deleted_at = now()
-  - [ ] 2.3 Metodo `restore(userId, id)`: SET deleted_at = null
-  - [ ] 2.4 Metodo `listTrash(userId)`: WHERE deleted_at IS NOT NULL AND deleted_at > now() - 30 days
+- [x] **Task 2: Estender TaskRepository** (AC: 3, 4, 6, 7)
+  - [x] 2.1 Metodo `update(userId, id, data)`: UPDATE com verificacao de ownership via RLS
+  - [x] 2.2 Metodo `softDelete(userId, id)`: SET deleted_at = now()
+  - [x] 2.3 Metodo `restore(userId, id)`: SET deleted_at = null
+  - [x] 2.4 Metodo `listTrash(userId)`: WHERE deleted_at IS NOT NULL AND deleted_at > now() - 30 days
 
-- [ ] **Task 3: API Routes** (AC: 2, 3, 4, 7)
-  - [ ] 3.1 Criar `src/app/api/tasks/[id]/route.ts` — PATCH (update), DELETE (soft delete)
-  - [ ] 3.2 Criar `src/app/api/tasks/[id]/restore/route.ts` — POST (restore)
-  - [ ] 3.3 Criar `src/app/api/tasks/trash/route.ts` — GET (lista lixeira)
-  - [ ] 3.4 Validar body do PATCH com taskUpdateSchema (Zod)
+- [x] **Task 3: API Routes** (AC: 2, 3, 4, 7)
+  - [x] 3.1 Criar `src/app/api/tasks/[id]/route.ts` — GET, PATCH (update), DELETE (soft delete)
+  - [x] 3.2 Criar `src/app/api/tasks/[id]/restore/route.ts` — POST (restore)
+  - [x] 3.3 Criar `src/app/api/tasks/trash/route.ts` — GET (lista lixeira)
+  - [x] 3.4 Validar body do PATCH com taskUpdateSchema (Zod)
 
-- [ ] **Task 4: React Query Hooks** (AC: 3, 4, 5)
-  - [ ] 4.1 Criar `useUpdateTask.ts` com optimistic update (onMutate/onError/onSettled)
-  - [ ] 4.2 Criar `useDeleteTask.ts` — soft delete + undo logic com sonner toast
-  - [ ] 4.3 Criar `useRestoreTask.ts` — POST restore + invalidateQueries
+- [x] **Task 4: React Query Hooks** (AC: 3, 4, 5)
+  - [x] 4.1 Criar `useUpdateTask.ts` com optimistic update (onMutate/onError/onSettled)
+  - [x] 4.2 Criar `useDeleteTask.ts` — soft delete + undo logic com sonner toast
+  - [x] 4.3 Criar `useRestoreTask.ts` — POST restore + invalidateQueries
 
-- [ ] **Task 5: Inline title edit no TaskCard** (AC: 1, 8)
-  - [ ] 5.1 Clique no titulo: mostra Input inline com valor atual
-  - [ ] 5.2 onBlur ou Enter: salva via useUpdateTask se titulo mudou
-  - [ ] 5.3 Escape: cancela edicao sem salvar
-  - [ ] 5.4 Status dropdown direto na lista: Select com opcoes todo/in_progress/done
+- [x] **Task 5: Inline title edit no TaskCard** (AC: 1, 8)
+  - [x] 5.1 Clique no titulo: mostra Input inline com valor atual
+  - [x] 5.2 onBlur ou Enter: salva via useUpdateTask se titulo mudou
+  - [x] 5.3 Escape: cancela edicao sem salvar
+  - [x] 5.4 Status dropdown direto na lista: Select com opcoes todo/in_progress/done
 
-- [ ] **Task 6: TaskDrawer em modo edicao** (AC: 2, 3)
-  - [ ] 6.1 Aceitar prop `task?: Task` para pre-popular campos
-  - [ ] 6.2 Se task passada: modo edicao (titulo do drawer "Editar Tarefa", submit chama useUpdateTask)
-  - [ ] 6.3 Clique fora do titulo no TaskCard abre drawer com task pre-populada
+- [x] **Task 6: TaskDrawer em modo edicao** (AC: 2, 3)
+  - [x] 6.1 Aceitar prop `task?: TaskSummary` para pre-popular campos
+  - [x] 6.2 Se task passada: modo edicao (titulo "Editar Tarefa", submit chama useUpdateTask)
+  - [x] 6.3 Clique no card (fora do titulo) abre drawer com task pre-populada
 
-- [ ] **Task 7: Delete com confirmacao e undo** (AC: 4, 5, 6)
-  - [ ] 7.1 Botao excluir no TaskCard (icone trash, aparece no hover)
-  - [ ] 7.2 Clique: chamar useDeleteTask diretamente (sem dialog de confirmacao separado — o toast de undo e o mecanismo de seguranca)
-  - [ ] 7.3 Toast sonner: "Tarefa movida para a lixeira" + botao "Desfazer"
-  - [ ] 7.4 Clique em "Desfazer": chamar useRestoreTask, dismiss toast
-  - [ ] 7.5 Apos 5s sem acao: soft delete confirmado (deleted_at permanece)
+- [x] **Task 7: Delete com confirmacao e undo** (AC: 4, 5, 6)
+  - [x] 7.1 Botao excluir no TaskCard (icone trash, aparece no hover)
+  - [x] 7.2 Clique: soft delete imediato via useDeleteTask (optimistic)
+  - [x] 7.3 Toast sonner: "Tarefa movida para a lixeira" + botao "Desfazer" (5s)
+  - [x] 7.4 Clique em "Desfazer": chamar useRestoreTask
+  - [x] 7.5 Apos 5s sem acao: soft delete confirmado
 
-- [ ] **Task 8: Pagina /tasks/trash** (AC: 7)
-  - [ ] 8.1 Criar `src/features/tasks/components/TrashList.tsx`
-  - [ ] 8.2 Exibir tarefas com data de exclusao e botao "Restaurar"
-  - [ ] 8.3 Criar `src/app/(dashboard)/tasks/trash/page.tsx`
-  - [ ] 8.4 Link para /tasks/trash na pagina /tasks (ex: "Ver lixeira")
+- [x] **Task 8: Pagina /tasks/trash** (AC: 7)
+  - [x] 8.1 Criar `src/features/tasks/components/TrashList.tsx`
+  - [x] 8.2 Exibir tarefas com data de exclusao e botao "Restaurar"
+  - [x] 8.3 Criar `src/app/(dashboard)/tasks/trash/page.tsx`
+  - [x] 8.4 Link "Lixeira" na pagina /tasks
 
-- [ ] **Task 9: Verificacao final** (AC: 1-8)
-  - [ ] 9.1 `npm run lint && npm run typecheck && npm run test` passando
-  - [ ] 9.2 Build limpo
-  - [ ] 9.3 File List completo abaixo
+- [x] **Task 9: Verificacao final** (AC: 1-8)
+  - [x] 9.1 lint ✅ (0 erros) | typecheck ✅ | test 8/8 ✅
+  - [x] 9.2 Build limpo — 13 routes
+  - [x] 9.3 File List completo abaixo
 
 ---
 
@@ -207,25 +207,27 @@ toast('Tarefa movida para a lixeira', {
 |------|---------|-------------|--------|
 | 2026-02-21 | 1.0 | Story criada | @sm (River) |
 | 2026-02-21 | 1.1 | Status Draft para Ready — GO (10/10). Optimistic update e undo toast bem especificados, riscos de rollback documentados. Pronta para implementação. | @po (Pax) |
+| 2026-02-21 | 1.2 | Implementação completa (YOLO mode). Todos os 8 ACs implementados. lint ✅ | typecheck ✅ | test 8/8 ✅ | build ✅. Status → InReview. | @dev (Dex) |
+| 2026-02-21 | 1.3 | PR #8 merged (squash) → develop. CI Quality Checks ✅ (43s). Status → Done. | @devops (Gage) |
 
 ---
 
 ## File List
 
-**A criar:**
-- src/app/api/tasks/[id]/route.ts
-- src/app/api/tasks/[id]/restore/route.ts
-- src/app/api/tasks/trash/route.ts
-- src/features/tasks/hooks/useUpdateTask.ts
-- src/features/tasks/hooks/useDeleteTask.ts
-- src/features/tasks/hooks/useRestoreTask.ts
-- src/features/tasks/components/TrashList.tsx
-- src/app/(dashboard)/tasks/trash/page.tsx
+**Criados:**
+- src/app/api/tasks/[id]/route.ts — GET, PATCH (update), DELETE (soft delete)
+- src/app/api/tasks/[id]/restore/route.ts — POST (restaurar tarefa)
+- src/app/api/tasks/trash/route.ts — GET (lixeira, últimos 30 dias)
+- src/features/tasks/hooks/useUpdateTask.ts — optimistic update (onMutate/onError/onSettled)
+- src/features/tasks/hooks/useDeleteTask.ts — soft delete + snapshot rollback
+- src/features/tasks/hooks/useRestoreTask.ts — restore + invalidateQueries
+- src/features/tasks/components/TrashList.tsx — lista lixeira com botão Restaurar
+- src/app/(dashboard)/tasks/trash/page.tsx — página /tasks/trash
 
-**A modificar:**
-- src/lib/repositories/TaskRepository.ts — update, softDelete, restore, listTrash
-- src/features/tasks/schemas/task.schema.ts — taskUpdateSchema
-- src/features/tasks/components/TaskCard.tsx — inline edit, status dropdown, delete button
-- src/features/tasks/components/TaskDrawer.tsx — modo edicao
-- src/app/providers.tsx — Toaster do sonner
+**Modificados:**
+- src/lib/repositories/TaskRepository.ts — update(), softDelete(), restore(), listTrash()
+- src/features/tasks/components/TaskCard.tsx — inline title edit, status Select, delete button (hover)
+- src/features/tasks/components/TaskDrawer.tsx — modo edição com pre-populate via useEffect
+- src/features/tasks/components/TaskList.tsx — prop onEditTask adicionada
+- src/app/(dashboard)/tasks/page.tsx — estado editingTask, link Lixeira
 - docs/stories/2.2.task-edit-delete-recovery.story.md
